# relay-podcasts

./: .env.example  README.md  docker-compose.yaml
backend/: Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py
backend/app/: config.py  dependencies.py  main.py  models.py  schemas.py
backend/app/routers/: auth.py  data.py  podcasts.py
backend/app/services/: audio_proxy.py  key_service.py  podcast_index.py
frontend/: Dockerfile  README.md  package-lock.json  package.json  vite.config.ts
frontend/src/: app.css  app.html
frontend/src/lib/: api.ts  crypto.ts  opml.ts  player.svelte.ts  store.svelte.ts  theme.svelte.ts  toast.svelte.ts  types.ts
frontend/src/lib/components/: BottomNav.svelte  EpisodeCard.svelte  EpisodeStatus.svelte  ImportModal.svelte  KeyDisplay.svelte  Player.svelte  PlayerFull.svelte  PodcastCard.svelte  ProgressBar.svelte  Toast.svelte
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/api/[...path]/: +server.ts
frontend/src/routes/app/: +layout.svelte  +page.svelte
frontend/src/routes/app/episode/[id]/: +page.svelte  +page.ts
frontend/src/routes/app/podcast/[id]/: +page.svelte  +page.ts
frontend/src/routes/app/queue/: +page.svelte
frontend/src/routes/app/search/: +page.svelte
frontend/src/routes/app/settings/: +page.svelte
frontend/src/routes/app/subscriptions/: +page.svelte
frontend/static/: manifest.json
